# cay

./: .gitignore  CMakeLists.txt  README.md  resource.rc  upgit.bat
src/: CayEngine.cpp  CayEngine.cs  ChanhData.cpp  ChanhData.h  ChanhEngine.cpp  ChanhEngine.h  ExcludeManager.cpp  ExcludeManager.h  InputInjector.cpp  InputInjector.h  KeyboardHookManager.cpp  KeyboardHookManager.h  MacroManager.cpp  SettingsUI.cpp  main.cpp
